# plato

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project
docs/: spec.md
lib/: ast.ml  ast.mli  dune  eval.ml  lexer.ml  lexer.mli  parser.ml  parser.mli  parser.mly  token.ml  typecheck.ml
src/: dune  lexer.ml  main.ml  token.ml
test/: debug_block.ml  debug_conditional_grammar.ml  debug_detailed.ml  debug_exact.ml  debug_expressions.ml  debug_features.ml  debug_functions.ml  debug_identifier_issue.ml  debug_if.ml  debug_if_issue.ml  debug_incremental.ml  debug_main.ml  debug_minimal.ml  debug_minimal_if.ml  debug_parser.ml  debug_return.ml  debug_return_issue.ml  debug_semicolon.ml  debug_step_by_step.ml  debug_various_identifiers.ml  dune  run_all_tests.ml  test.plato  test_block_match.ml  test_comprehensive.ml  test_concrete.plato  test_eval.ml  test_fat_arrow.ml  test_features.ml  test_file.ml  test_for_loop.ml  test_impl.ml  test_integration.ml  test_lexer.ml  test_match.ml  test_match_complete.ml  test_match_statements.ml  test_match_token.ml  test_match_tokens.ml  test_parser.ml  (+5 more)
