(executable
 (name test_lexer)
 (modules test_lexer)
 (libraries plato))

(executable
 (name test_parser)
 (modules test_parser)
 (libraries plato))

(executable
 (name debug_parser)
 (modules debug_parser)
 (libraries plato))

(executable
 (name debug_detailed)
 (modules debug_detailed)
 (libraries plato))

(executable
 (name debug_minimal)
 (modules debug_minimal)
 (libraries plato))

(executable
 (name debug_return)
 (modules debug_return)
 (libraries plato))

(executable
 (name debug_block)
 (modules debug_block)
 (libraries plato))

(executable
 (name test_file)
 (modules test_file)
 (libraries plato))

(executable
 (name debug_features)
 (modules debug_features)
 (libraries plato))

(executable
 (name debug_expressions)
 (modules debug_expressions)
 (libraries plato))

(executable
 (name debug_incremental)
 (modules debug_incremental)
 (libraries plato))

(executable
 (name debug_main)
 (modules debug_main)
 (libraries plato))

(executable
 (name debug_if)
 (modules debug_if)
 (libraries plato))

(executable
 (name debug_exact)
 (modules debug_exact)
 (libraries plato))

(executable
 (name debug_semicolon)
 (modules debug_semicolon)
 (libraries plato))

(executable
 (name debug_step_by_step)
 (modules debug_step_by_step)
 (libraries plato))

(executable
 (name debug_functions)
 (modules debug_functions)
 (libraries plato))

(executable
 (name debug_if_issue)
 (modules debug_if_issue)
 (libraries plato))

(executable
 (name debug_identifier_issue)
 (modules debug_identifier_issue)
 (libraries plato))

(executable
 (name debug_minimal_if)
 (modules debug_minimal_if)
 (libraries plato))

(executable
 (name debug_various_identifiers)
 (modules debug_various_identifiers)
 (libraries plato))

(executable
 (name test_features)
 (modules test_features)
 (libraries plato))

(executable
 (name test_for_loop)
 (modules test_for_loop)
 (libraries plato))

(executable
 (name debug_conditional_grammar)
 (modules debug_conditional_grammar)
 (libraries plato))
