(executable
 (name test_lexer)
 (modules test_lexer)
 (libraries plato))

(executable
 (name test_parser)
 (modules test_parser)
 (libraries plato))

(executable
 (name test_features)
 (modules test_features)
 (libraries plato))

(executable
 (name test_comprehensive)
 (modules test_comprehensive)
 (libraries plato))

(executable
 (name test_integration)
 (modules test_integration)
 (libraries plato))

(executable
 (name run_all_tests)
 (modules run_all_tests)
 (libraries plato))
